--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 
 body {
 	background-color: #fff3b8;
-	font-family: "CC-ultimatum","keifont",serif;
+	font-family: "CC-ultimatum","cinecaption226",serif;
 }
 
 footer {
